...
        android:id="@+id/mateChatsFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.mate.chats.MateChatsFragment"
        android:label="@string/fragment_mate_chats_top_bar_title_text"
        tools:layout="@layout/fragment_mate_chats">
        <action
            android:id="@+id/action_mateChatsFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_top" />
        <action
            android:id="@+id/action_mateChatsFragment_to_mateChatFragment"
...
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/geoSettingsFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.geo.settings.GeoSettingsFragment"
        android:label="@string/fragment_geo_settings_top_bar_title_text"
        tools:layout="@layout/fragment_geo_settings" >
        <action
            android:id="@+id/action_geoSettingsFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
...
